--- a/angular.json
+++ b/angular.json
@@ -92,8 +92,10 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/lara-dark-indigo/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.min.css"
             ],
             "scripts": []
           }
